[tool.poetry]
name = "poetry-dependency"
version = "0.1.0"
description = ""
authors = ["Elvis Fabricio Zhune Mero <elfabri28@gmail.com>"]
packages = [{include = "02_src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
