[tool.poetry]
name = "poetry-dependency"
version = "0.1.0"
description = ""
authors = ["Elvis Fabricio Zhune Mero <elfabri28@gmail.com>"]
packages = [{include = "02_src"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
tensorflow = "^2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
